profilelist1exp/unpackaged/objects/Services_Project__c.object
<CustomObject>
    <description>SOM R14.10 - Data in this object are populated from Changepoint upon project creation in Change point.
Change Point will associate Projects with Opportunities and send Deal ID along with the project data.
One Opportunity can have multiple Projects.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>SOM R14.10 -extract Account Name from Opportunity</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affinity_Account_ID__c</fullName>
        <description>SOM R14.10 -extract Affinity Account ID from Opportunity</description>
        <formula>Opportunity__r.Account.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <description>SOM R14.10 -extract Book Date from Opportunity</description>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Affinity_Customer_Number__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;Customer Number&quot; field values.</description>
        <label>CP/Affinity Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Project_ID__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;CP Project Id&quot; field values. It is GUID in Changepoint.</description>
        <externalId>true</externalId>
        <label>CP Project ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;SFDC Deal ID&quot; field values. It is Deal ID in SFDC.</description>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Services_Industry__c</fullName>
        <description>SOM R15.3 -extract Dell Services Industry from Opportunity</description>
        <formula>Text( Opportunity__r.Dell_Defined_Industry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Services Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Services_LOB__c</fullName>
        <description>SOM R14.10 -extract Dell Services LOB from Opportunity</description>
        <formula>IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Infrastructure &amp; Cloud Computing&quot;), &quot;Infrastructure &amp; Cloud Computing; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Applications&quot;), &quot;Applications; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;BPO (Business Process Outsourcing)&quot;), &quot;BPO (Business Process Outsourcing); &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Security&quot;), &quot;Security; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Support &amp; Deployment&quot;), &quot;Support &amp; Deployment; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot; Services LOB unavailable for offer(s)&quot;), &quot;Services LOB unavailable for offer(s); &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Services LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>SOM R14.10 -extract Opportunity Name from Opportunity</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>SOM R14.10 -extract Opportunity Owner from Opportunity</description>
        <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+ Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>SOM R14.10 - Use this Master-Detail Relationship to link Services Project (data originate from Changepoint) with Opportunity object</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Services Project</relationshipLabel>
        <relationshipName>Services_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <description>This field was created as part of CR 11975 (story 170039), the value will be coming from ChangePoint via BOOMI</description>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;PA Project ID&quot; field values</description>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;Project Manager&quot; field values.</description>
        <label>Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;Project Name&quot; field values.</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <description>SOM R14.10 - To keep Changepoint &quot;Planned Start Date&quot; field values.</description>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner__c</fullName>
        <description>SOM R14.10 -extract Services Sales Owner from Opportunity</description>
        <formula>Opportunity__r.Services_Sales_Owner__r.FirstName +&apos; &apos;+ Opportunity__r.Services_Sales_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Unweighted_Revenue__c</fullName>
        <description>SOM R14.10 -extract Services Unweighted Revenue from Opportunity</description>
        <formula>Opportunity__r.Unweighted_Rev_Services_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Unweighted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Services Project</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Services Project Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Deal_Id_should_be_correct</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE(Deal_ID__c ) &lt;&gt; Value( Opportunity__r.Deal_ID__c)</errorConditionFormula>
        <errorDisplayField>Deal_ID__c</errorDisplayField>
        <errorMessage>Please correct the Deal ID</errorMessage>
    </validationRules>
</CustomObject>